finished the json code. Need to fix jquery to make ui appealing. Bug spilling all the info to the page when placeInfo() is called.

--- a/twitchCSS.css
+++ b/twitchCSS.css
@@ -42,8 +42,20 @@ body{
     background: #9b18f2;
 }
 
-#userInfo{
+.userInfo{
     border: 1px solid #a9a9a9;
     background: #fcdcff;
+}
+
+.userName{
+    margin-right: 0;
+}
+
+.image{
+    width: 50px;
+}
+
+.title{
+
 }
 
